--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/AR web school.loader.js";
+      var loaderUrl = buildUrl + "/ARWebSchool.loader.js";
       var config = {
-        dataUrl: buildUrl + "/AR web school.data",
-        frameworkUrl: buildUrl + "/AR web school.framework.js",
-        codeUrl: buildUrl + "/AR web school.wasm",
+        dataUrl: buildUrl + "/ARWebSchool.data",
+        frameworkUrl: buildUrl + "/ARWebSchool.framework.js",
+        codeUrl: buildUrl + "/ARWebSchool.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "ARSchool",
